@@ -10,6 +10,7 @@ cgrates (1.0) UNRELEASED; urgency=medium
   * [SessionS] The sessions are no longer terminated on shutdown if the replication_conns are set
   * [FilterS] Added *regex filter
   * [DispatcherS] Removed Subsystems field in favor of filters
+  * [RSRParsers] Added *len dataconverter  
   
  -- DanB <danb@cgrates.org>  Thu, 4 May 2021 12:05:00 +0200
 
